cambios get set Cristhian

--- a/Node.ipynb
+++ b/Node.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
     "        self.locations=locations\n",
     "        self.urls=urls\n",
     "        self.numbers=numbers\n",
-    "        self.coordinates = cooordinates\n",
+    "        self.coordinates = coordinates\n",
     "        self.images=images\n",
     "        self.dates=dates\n",
     "        self.payment_accounts=payment_accounts\n",
@@ -34,6 +34,12 @@
     "    #--------------------------------------------------------------------------\n",
     "    # METODOS\n",
     "    #--------------------------------------------------------------------------\n",
+    "    \n",
+    "    def info(self):\n",
+    "        print(\"ID is: \"+self.ID)\n",
+    "        print(\"Url is: \"+self.url)\n",
+    "        print(\"Language is: \"+self.language)\n",
+    "           \n",
     "    \n",
     "    def __str__(self):\n",
     "        return \"The associated ID is: \" + self.ID\n",
@@ -141,25 +147,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = Node(849, \"eg\")"
+    "m = Node(\"849\", \"eg\",\"es\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Node at 0x19b42fb55f8>"
+       "<__main__.Node at 0x1e85d66a3a0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,45 +176,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The associated ID is: 849\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(m)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID is: 849\n",
+      "Url is: eg\n",
+      "Language is: es\n"
+     ]
+    }
+   ],
+   "source": [
+    "m.info()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "g=Node(\"123456\",\"http://blahblahblah.com\",\"En\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Node at 0x1e85d5571c0>"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The associated ID is: 123456\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(g)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID is: 123456\n",
+      "Url is: http://blahblahblah.com\n",
+      "Language is: En\n"
+     ]
+    }
+   ],
+   "source": [
+    "g.info()"
+   ]
   },
   {
    "cell_type": "code",
