--- a/Node.ipynb
+++ b/Node.ipynb
@@ -2,33 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "non-default argument follows default argument (<ipython-input-6-63f586b208bc>, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-6-63f586b208bc>\"\u001b[1;36m, line \u001b[1;32m7\u001b[0m\n\u001b[1;33m    def __init__(self, ID, url, urls = [], social_networks_urls=[], language, text=\"\", names= [], locations = [],\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m non-default argument follows default argument\n"
+     ]
+    }
+   ],
    "source": [
     "class Website:\n",
     "    \n",
     "    #--------------------------------------------------------------------------\n",
     "    # CONSTRUCTOR\n",
     "    #--------------------------------------------------------------------------\n",
-    "    self.destination_hash, # ID of the website.\n",
-    "                self.agent_destination, # URL of the website.\n",
-    "                urls,                  # URLS found on the website.\n",
-    "                social_networks_urls,  # Social networks urls.\n",
-    "                language,              # Language of the website.\n",
-    "                text,                  # Text of the website.\n",
-    "                names,                 # Names that appeared on the website.\n",
-    "                locations,             # Locations mentioned on website.\n",
-    "                coordinates,           # Coordinates of maps that appear on the website.\n",
-    "                organizations,         # Organization name's.\n",
-    "                dates,                 # Dates on the website.\n",
-    "                phonenumbers,          # Phonenumbers on the website.\n",
-    "                images_urls,           # Images urls.\n",
-    "                payment_accounts,      # Payment Accounts (banks, crytpo).\n",
-    "                emails                 # Emails on the website.\n",
-    "    def __init__(self, ID, url, urls = [], social_networks_urls=[], language, text=\"\", names= [], locations = [], coordinates = [],\n",
-    "                 organizations=[], dates = [], phonenumbers = [], images_urls = [],  payment_accounts= [], emails=[] ):\n",
     "\n",
+    "    def __init__(self, ID, url, urls = [], social_networks_urls=[], language, text=\"\", names= [], locations = [],\n",
+    "                 coordinates = [], organizations=[], dates = [], phonenumbers = [], images_urls = [],  payment_accounts= [], \n",
+    "                 emails=[] ):\n",
     "        self.ID = ID # (SHA256, \"http://titulopagina.com\")\n",
     "        self.url = url\n",
     "        self.language = language\n",
@@ -36,7 +31,7 @@
     "        self.locations=locations\n",
     "        self.urls=urls\n",
     "        self.phonenumbers=phonenumbers\n",
-    "        self.coordinates = cooordinates\n",
+    "        self.coordinates = coordinates\n",
     "        self.images_urls=images_urls\n",
     "        self.dates=dates\n",
     "        self.payment_accounts=payment_accounts\n",
@@ -149,103 +144,8 @@
     "  \n",
     "\n",
     "    \n",
-    "    \n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import networkx as nx\n",
-    "G = nx.Graph()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
