--- a/Website.ipynb
+++ b/Website.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "non-default argument follows default argument (<ipython-input-6-63f586b208bc>, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-6-63f586b208bc>\"\u001b[1;36m, line \u001b[1;32m7\u001b[0m\n\u001b[1;33m    def __init__(self, ID, url, urls = [], social_networks_urls=[], language, text=\"\", names= [], locations = [],\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m non-default argument follows default argument\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Website:\n",
     "    \n",
@@ -21,8 +12,8 @@
     "    # CONSTRUCTOR\n",
     "    #--------------------------------------------------------------------------\n",
     "\n",
-    "    def __init__(self, ID, url, urls = [], social_networks_urls=[], language, text=\"\", names= [], locations = [],\n",
-    "                 coordinates = [], organizations=[], dates = [], phonenumbers = [], images_urls = [],  payment_accounts= [], \n",
+    "    def __init__(self, ID, url, language, urls = [], social_networks_urls=[], text=\"\", names= [], locations = [],\n",
+    "                 iframes = [], organizations=[], dates = [], phonenumbers = [], images_urls = [],  payment_accounts= [], \n",
     "                 emails=[] ):\n",
     "        self.ID = ID # (SHA256, \"http://titulopagina.com\")\n",
     "        self.url = url\n",
@@ -31,7 +22,7 @@
     "        self.locations=locations\n",
     "        self.urls=urls\n",
     "        self.phonenumbers=phonenumbers\n",
-    "        self.coordinates = coordinates\n",
+    "        self.iframes = iframes\n",
     "        self.images_urls=images_urls\n",
     "        self.dates=dates\n",
     "        self.payment_accounts=payment_accounts\n",
@@ -49,10 +40,13 @@
     "        print(\"Url is: \"+self.url)\n",
     "        print(\"Language is: \"+self.language)\n",
     "           \n",
-    "    \n",
     "    def __str__(self):\n",
     "        return \"The associated ID is: \" + self.ID\n",
-    "        \n",
+    "    \n",
+    "    \n",
+    "    # This method recomputes all the attributes of the website, except the ID and URL.\n",
+    "    def reCompute(self):\n",
+    "        return \"\"\n",
     "        \n",
     "    #--------------------------------------------------------------------------\n",
     "    # METODOS SET\n",
@@ -97,7 +91,6 @@
     "    def setSocialNetworks(self, newSocialNetworks):\n",
     "        self.social_networks=newSocialNetworks\n",
     "        \n",
-    "    \n",
     "    #--------------------------------------------------------------------------\n",
     "    # METODOS GET\n",
     "    #--------------------------------------------------------------------------\n",
@@ -123,8 +116,8 @@
     "    def getNumbers(self):\n",
     "        return self.numbers\n",
     "    \n",
-    "    def getCoordinates(self):\n",
-    "        return self.coordinates\n",
+    "    def getIframes(self):\n",
+    "        return self.iframes\n",
     "    \n",
     "    def getImages(self):\n",
     "        return self.images\n",
@@ -145,186 +138,8 @@
     "        return self.text\n",
     "    \n",
     "    def getSocialNetworks(self):\n",
-    "        return self.social_networks\n",
-    "    \n",
-    "  \n",
-    "\n",
-    "    \n",
-    "    "
+    "        return self.social_networks"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import networkx as nx\n",
-    "G = nx.Graph()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.Node at 0x1e85d66a3a0>"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The associated ID is: 849\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(m)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ID is: 849\n",
-      "Url is: eg\n",
-      "Language is: es\n"
-     ]
-    }
-   ],
-   "source": [
-    "m.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "g=Node(\"123456\",\"http://blahblahblah.com\",\"En\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.Node at 0x1e85d5571c0>"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "g"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The associated ID is: 123456\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(g)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ID is: 123456\n",
-      "Url is: http://blahblahblah.com\n",
-      "Language is: En\n"
-     ]
-    }
-   ],
-   "source": [
-    "g.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -343,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
