Clase Website lista

--- a/Website.ipynb
+++ b/Website.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,25 +10,25 @@
     "    \n",
     "    #--------------------------------------------------------------------------\n",
     "    # CONSTRUCTOR\n",
-    "    #--------------------------------------------------------------------------\n",
+    "    #--------------------------------------------------------------------------               \n",
     "\n",
     "    def __init__(self,                     \n",
     "                 ID,                         # ID of the website.\n",
     "                 url,                        # URL of the website.\n",
     "                 content_type,               # Contet Type of the website.\n",
-    "                 language,                   # \n",
-    "                 urls = [], \n",
-    "                 social_networks_urls=[], \n",
-    "                 text=\"\", \n",
-    "                 names= [], \n",
-    "                 locations = [],\n",
-    "                 iframes = [], \n",
-    "                 organizations=[], \n",
-    "                 dates = [], \n",
-    "                 phonenumbers = [], \n",
-    "                 images_urls = [],  \n",
-    "                 payment_accounts= [], \n",
-    "                 emails=[]):\n",
+    "                 language,                   # Language of the website.\n",
+    "                 urls = [],                  # URLS found on the website.\n",
+    "                 social_networks_urls=[],    # Social networks urls.\n",
+    "                 text=\"\",                    # Text of the website.\n",
+    "                 names= [],                  # Names that appeared on the website.\n",
+    "                 locations = [],             # Locations mentioned on website.\n",
+    "                 iframes = [],               # Iframes code (maps or videos) that appear on the website.\n",
+    "                 organizations=[],           # Organization names.\n",
+    "                 dates = [],                 # Dates on the website.\n",
+    "                 phonenumbers = [],          # Phonenumbers on the website.\n",
+    "                 images_urls = [],           # Images urls.\n",
+    "                 payment_accounts= [],       # Payment Accounts (banks, crytpo).\n",
+    "                 emails=[]):                 # Emails on the website.\n",
     "        \n",
     "        self.__ID = ID # (SHA256, \"http://titulopagina.com\")\n",
     "        self.__url = url\n",
@@ -48,53 +48,155 @@
     "        self.__social_networks=social_networks\n",
     "        \n",
     "    #--------------------------------------------------------------------------\n",
-    "    # METODOS\n",
+    "    # METHODS\n",
     "    #--------------------------------------------------------------------------\n",
     "    \n",
+    "    def printFormat(self, list_):\n",
+    "        for i in range(len(list_)): \n",
+    "            print(\"--------\")\n",
+    "            print(lista_par[i])\n",
+    "        if type(result[i]) == list:\n",
+    "            for element in result[i]:\n",
+    "                print(element)\n",
+    "        else: \n",
+    "            print(result[i])\n",
+    "            print(\"\\n\")\n",
+    "    \n",
     "    def info(self):\n",
-    "        print(\"ID: \" + self.__ID)\n",
-    "        print(\"URL: \" + self.__url)\n",
-    "        print(\"Language: \" + self.__language)\n",
-    "        print(\"Names found: \" + self.__names)\n",
-    "        print(\"Locations: \" + self.__locations)\n",
-    "        print(\"URLS: \" + self.__urls)\n",
-    "        print(\"Phone numbers: \" + self.__phonenumbers)\n",
-    "        print(\"IFRames: \" + self.__iframes)\n",
-    "        print(\"Images URLS: \" + self.__images_urls)\n",
-    "        print(\"Dates: \" + self.__dates)\n",
-    "        print(\"Payment Accounts: \" + self.__payment_accounts)\n",
-    "        print(\"Emails: \" + self.__emails)\n",
-    "        print(\"Organizations: \" + self.__organizations)\n",
-    "        print(\"Social Networks: \" + self.__social_networks)\n",
-    "        print(\"Text: \" + self.__text)\n",
+    "        print(\"--------\")\n",
+    "        print(\"ID: \")\n",
+    "        print(self.__ID)\n",
+    "        print(\"--------\")\n",
+    "        print(\"URL: \")\n",
+    "        print(self.__url)\n",
+    "        print(\"--------\")\n",
+    "        print(\"Language: \")\n",
+    "        print(self.__language)\n",
+    "        print(\"--------\")\n",
+    "        print(\"Names found: \")\n",
+    "        print(printFormat(self.__names))\n",
+    "        print(\"--------\")\n",
+    "        print(\"Locations: \")\n",
+    "        print(printFormat(self.__locations))\n",
+    "        print(\"--------\")\n",
+    "        print(\"URLS: \")\n",
+    "        print(printFormat(self.__urls))\n",
+    "        print(\"--------\")\n",
+    "        print(\"Phone numbers: \")\n",
+    "        print(printFormat(self.__phonenumbers))\n",
+    "        print(\"--------\")\n",
+    "        print(\"IFRames: \")\n",
+    "        print(printFormat(self.__iframes))\n",
+    "        print(\"--------\")\n",
+    "        print(\"Images URLS: \")\n",
+    "        print(printFormat(self.__images_urls))\n",
+    "        print(\"--------\")\n",
+    "        print(\"Dates: \")\n",
+    "        print(printFormat(self.__dates))\n",
+    "        print(\"--------\")\n",
+    "        print(\"Payment Accounts: \")\n",
+    "        print(printFormat(self.__payment_accounts))\n",
+    "        print(\"--------\")\n",
+    "        print(\"Emails: \")\n",
+    "        print(printFormat(self.__emails))\n",
+    "        print(\"--------\")\n",
+    "        print(\"Organizations: \") \n",
+    "        print(printFormat(self.__organizations))\n",
+    "        print(\"--------\")\n",
+    "        print(\"Social Networks: \")\n",
+    "        print(printFormat(self.__social_networks))\n",
+    "        print(\"--------\")\n",
+    "        print(\"Text: \")\n",
+    "        print(self.__text)\n",
     "        \n",
     "    def __str__(self):\n",
-    "        return \"Node ID\" + self.__ID\n",
+    "        return \"Node ID \" + self.__ID\n",
     "    \n",
-    "    def toTextPlain(self):\n",
-    "        return \"\"\n",
+    "    def toTextPlain(self, ruta):\n",
+    "        file = open(\"./datasets/\"+self.ID+\".txt\")\n",
+    "        file.write()\n",
+    "        file.write(\"--------\")\n",
+    "        file.write(\"ID: \")\n",
+    "        file.write(self.__ID)\n",
+    "        file.write(\"--------\")\n",
+    "        file.write(\"URL: \")\n",
+    "        file.write(self.__url)\n",
+    "        file.write(\"--------\")\n",
+    "        file.write(\"Language: \")\n",
+    "        file.write(self.__language)\n",
+    "        file.write(\"--------\")\n",
+    "        file.write(\"Names found: \")\n",
+    "        file.write(printFormat(self.__names))\n",
+    "        file.write(\"--------\")\n",
+    "        file.write(\"Locations: \")\n",
+    "        file.write(printFormat(self.__locations))\n",
+    "        file.write(\"--------\")\n",
+    "        file.write(\"URLS: \")\n",
+    "        file.write(printFormat(self.__urls))\n",
+    "        file.write(\"--------\")\n",
+    "        file.write(\"Phone numbers: \")\n",
+    "        file.write(printFormat(self.__phonenumbers))\n",
+    "        file.write(\"--------\")\n",
+    "        file.write(\"IFRames: \")\n",
+    "        file.write(printFormat(self.__iframes))\n",
+    "        file.write(\"--------\")\n",
+    "        file.write(\"Images URLS: \")\n",
+    "        file.write(printFormat(self.__images_urls))\n",
+    "        file.write(\"--------\")\n",
+    "        file.write(\"Dates: \")\n",
+    "        file.write(printFormat(self.__dates))\n",
+    "        file.write(\"--------\")\n",
+    "        file.write(\"Payment Accounts: \")\n",
+    "        file.write(printFormat(self.__payment_accounts))\n",
+    "        file.write(\"--------\")\n",
+    "        file.write(\"Emails: \")\n",
+    "        file.write(printFormat(self.__emails))\n",
+    "        file.write(\"--------\")\n",
+    "        file.write(\"Organizations: \") \n",
+    "        file.write(printFormat(self.__organizations))\n",
+    "        file.write(\"--------\")\n",
+    "        file.write(\"Social Networks: \")\n",
+    "        file.write(printFormat(self.__social_networks))\n",
+    "        file.write(\"--------\")\n",
+    "        file.write(\"Text: \")\n",
+    "        file.write(self.__text)\n",
+    "        file.close()\n",
+    "    \n",
     "    \n",
     "    # This method recomputes all the attributes of the website, except the ID and URL.\n",
     "    def reCompute(self):\n",
-    "        \n",
     "        # Generate a new witness to re-explore the page.\n",
     "        witness = TheWitness(\n",
-    "            self.__url, \n",
-    "            self.__url,\n",
-    "            self.__ID, \n",
-    "            0\n",
-    "        )\n",
-    "        result = witness.scrap()\n",
+    "                self.__url, \n",
+    "                self.__url,\n",
+    "                self.__ID, \n",
+    "                0 )\n",
+    "        try:         \n",
+    "            result = witness.scrap()\n",
+    "\n",
+    "            self.setContentType(result[2])\n",
+    "            self.setLanguage(result[3])\n",
+    "            self.setUrls(result[4])\n",
+    "            self.setSocialNetworks(result[5])\n",
+    "            self.setText(result[6])\n",
+    "            self.setNames(result[7])\n",
+    "            self.setLocations(result[8])\n",
+    "            self.setIframes(result[9])\n",
+    "            self.setOrganizations(result[10])\n",
+    "            self.setDates(result[11])\n",
+    "            self.setNumbers(result[12])\n",
+    "            self.setImages(result[13])\n",
+    "            self.setPaymentAccounts(result[14])\n",
+    "            self.setEmails(result[15])\n",
+    "            del witness\n",
+    "            return True\n",
     "        \n",
-    "        self.setContentType(result[3])\n",
-    "        self.setLanguage(result[4])\n",
-    "        #self.\n",
-    "        \n",
-    "        \n",
-    "        return \"\"\n",
+    "        except:\n",
+    "            del witness\n",
+    "            return False\n",
     "        \n",
     "    #--------------------------------------------------------------------------\n",
-    "    # METODOS SET\n",
+    "    # SET METHODS\n",
     "    #--------------------------------------------------------------------------\n",
     "    \n",
     "    def setContentType(self, new_content_type):\n",
@@ -115,8 +217,8 @@
     "    def setNumbers(self, newNumbers):\n",
     "        self.__numbers = newNumbers\n",
     "        \n",
-    "    def setCoordinates(self, newCoordinates):\n",
-    "        self.__coordinates = newCoordinates\n",
+    "    def setIframes(self, newIframes):\n",
+    "        self.__iframes = newIframes\n",
     "        \n",
     "    def setImages(self, newImages):\n",
     "        self.__images = newImages\n",
@@ -140,7 +242,7 @@
     "        self.__social_networks = newSocialNetworks\n",
     "        \n",
     "    #--------------------------------------------------------------------------\n",
-    "    # METODOS GET\n",
+    "    # GET METHODS\n",
     "    #--------------------------------------------------------------------------\n",
     "    \n",
     "    def getID(self):\n",
@@ -191,24 +293,6 @@
     "    def getSocialNetworks(self):\n",
     "        return self.__social_networks"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def printFormat(self, list_):\n",
-    "    for i in range(len(list_)): \n",
-    "        print(\"--------\")\n",
-    "        print(lista_par[i])\n",
-    "        if type(result[i]) == list:\n",
-    "            for element in result[i]:\n",
-    "                print(element)\n",
-    "        else: \n",
-    "            print(result[i])\n",
-    "        print(\"\\n\")"
-   ]
   }
  ],
  "metadata": {
@@ -227,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
