Implementacion algoritmo de crear grafo

--- a/TheWitness.ipynb
+++ b/TheWitness.ipynb
@@ -131,7 +131,10 @@
     "    ## -----------------------\n",
     "    ## Webscrapping functions.\n",
     "    ## -----------------------\n",
-    "        \n",
+    "    \n",
+    "    def getDistance(self):\n",
+    "        return self.distance_from_root\n",
+    "    \n",
     "    \"\"\"\n",
     "    This functions makes a requests to the destination website and\n",
     "    initialize a BeautifulSoup object for processing it.\n",
