se actualizar Algoritmo Grafo

--- a/Parallel_computing.ipynb
+++ b/Parallel_computing.ipynb
@@ -39,6 +39,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<module 'ipyparallel.client' from 'C:\\\\Users\\\\juang\\\\anaconda3\\\\lib\\\\site-packages\\\\ipyparallel\\\\client\\\\__init__.py'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "from IPython import parallel \n",
+    "parallel.client"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
