--- a/TheWitness.ipynb
+++ b/TheWitness.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,8 @@
     "        \n",
     "        internal_website_urls = result[0]\n",
     "        external_website_urls = result[1]\n",
-    "        urls = self.join_lists(internal_website_urls, external_website_urls)\n",
+    "        urls_prev = self.join_lists(internal_website_urls, external_website_urls)\n",
+    "        urls = self.clean_urls(urls_prev)\n",
     "        emails_list_1 = result[2]\n",
     "        social_networks_urls = result[3]\n",
     "        whatsapp_cellphones = result[4]\n",
@@ -82,7 +83,7 @@
     "            \n",
     "        # Get website content type\n",
     "        \n",
-    "        content_type = evaluate_model(text, 0.5)\n",
+    "        content_type = cluster_text(text)\n",
     "        \n",
     "        # Get names that appear on the website.\n",
     "        names = self.get_names(text, nlp)\n",
@@ -435,42 +436,73 @@
     "            new_list.append(element)\n",
     "        for element in list2: \n",
     "            new_list.append(element)\n",
-    "        return new_list"
+    "        return new_list\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    This method return url roots\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def clean_urls(self, urls):\n",
+    "        final_urls = []\n",
+    "        for url in urls:\n",
+    "            hostname = urllib.parse.urlparse(url).hostname\n",
+    "            if hostname not in final_urls:\n",
+    "                final_urls.append(hostname)\n",
+    "        return final_urls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "root = \"https://es.cam4.com/\"\n",
+    "root = \"https://es.chaturbate.com/\"\n",
     "witness = TheWitness(root, root, 1, 3)\n",
     "result = witness.scrap()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0, 0.25), (1, 0.25), (2, 0.25), (3, 0.25)]"
+       "['www.google.com',\n",
+       " 'cbswag.com',\n",
+       " 'exoticads.com',\n",
+       " 'support.chaturbate.com',\n",
+       " 'www.surveymonkey.com',\n",
+       " 'ar.chaturbate.com',\n",
+       " 'de.chaturbate.com',\n",
+       " 'el.chaturbate.com',\n",
+       " 'en.chaturbate.com',\n",
+       " 'es.chaturbate.com',\n",
+       " 'fr.chaturbate.com',\n",
+       " 'hi.chaturbate.com',\n",
+       " 'it.chaturbate.com',\n",
+       " 'ja.chaturbate.com',\n",
+       " 'ko.chaturbate.com',\n",
+       " 'nl.chaturbate.com',\n",
+       " 'pt.chaturbate.com',\n",
+       " 'ru.chaturbate.com',\n",
+       " 'tr.chaturbate.com',\n",
+       " 'zh.chaturbate.com',\n",
+       " 'www.rtalabel.org',\n",
+       " 'www.asacp.org']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result[2]"
+    "result[4]"
    ]
   },
   {
