--- a/text_clustering_final.ipynb
+++ b/text_clustering_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,16 +49,16 @@
     "    normalized = \" \".join([lemma.lemmatize(word) for word in punct_free.split()])\n",
     "    return normalized.split()\n",
     "\n",
-    "def evaluate_model(text, umbral_param):\n",
+    "def cluster_text(text, umbral_param = 0.5):\n",
     "    clean_text = [clean(text)]\n",
     "    doc_term_matrix_test = [dictionary.doc2bow(doc) for doc in clean_text]\n",
     "    distribution = ldamodel[doc_term_matrix_test[0]]\n",
     "    max_ = get_max(distribution, umbral_param)\n",
-    "    return distribution\n",
+    "    return max_\n",
     "\n",
     "def get_max(list_distribution, umbral_param):\n",
     "    umbral = umbral_param\n",
-    "    temp_label = \"N/A\"\n",
+    "    temp_label = -1\n",
     "    temp_max = 0\n",
     "    for cluster in list_distribution:\n",
     "        if cluster[1] > temp_max and cluster[1] > umbral:\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -78,14 +78,15 @@
        "2"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text = \"Mira a miles de personas reales desnudas y teniendo sexo en directo en webcam las 24 horas. 100% Gratis para mirar, chatear y transmitir. No se necesita ...\"\n",
-    "evaluate_model(text,0.7)"
+    "text = \"ciencia investigacion matemáticas física quimica\"\n",
+    "text2 = \"Mira a miles de personas reales desnudas y teniendo sexo en directo en webcam las 24 horas. 100% Gratis para mirar, chatear y transmitir. No se necesita ...\"\n",
+    "cluster_text(text2, 0.7)"
    ]
   }
  ],
