intento 1 algoritmo grafo

--- a/TheWitness.ipynb
+++ b/TheWitness.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,12 @@
     "import en_core_web_sm\n",
     "import networkx as nx\n",
     "\n",
-    "#%run ./text_clustering_final.ipynb"
+    "%run ./text_clustering_final.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,10 +39,7 @@
     "    social_media_names_file = \"./datasets/socialmedia_names.txt\"\n",
     "    \n",
     "    # Initialize witness features.\n",
-    "    def __init__(self, \n",
-    "                 origin_url, \n",
-    "                 destination_url, \n",
-    "                 destination_hash, \n",
+    "    def __init__(self, origin_url, destination_url, destination_hash, \n",
     "                 distance_from_root):\n",
     "        \n",
     "        # Where was the agent created?\n",
@@ -65,11 +62,27 @@
     "        internal_website_urls = result[0]\n",
     "        external_website_urls = result[1]\n",
     "        urls_prev = self.join_lists(internal_website_urls, external_website_urls)\n",
-    "        urls = self.clean_urls(urls_prev)\n",
+    "        # urls = self.clean_urls(urls_prev)\n",
+    "        urls=urls_prev\n",
     "        emails_list_1 = result[2]\n",
     "        social_networks_urls = result[3]\n",
     "        whatsapp_cellphones = result[4]\n",
     "        images_urls_1 = result[5]\n",
+    "        \n",
+    "        # Get text of the website.\n",
+    "        text = self.get_text(soup)\n",
+    "        \n",
+    "        # Get language of the website.\n",
+    "        language = self.get_language(text)\n",
+    "        \n",
+    "        if language == \"en\":\n",
+    "            nlp = spacy.load(\"en_core_web_sm\")\n",
+    "            #print(\"en\")\n",
+    "        elif language == \"es\":\n",
+    "            nlp = spacy.load(\"es_core_news_sm\")\n",
+    "            #print(\"es\")\n",
+    "            \n",
+    "        # Get website content type\n",
     "        \n",
     "        content_type = cluster_text(text)\n",
     "        \n",
@@ -85,86 +98,45 @@
     "        # Get orgazations name's that appear on the website.\n",
     "        organizations = self.find_organizations(text, nlp)\n",
     "        \n",
-    "            # Find all links on the page!\n",
-    "            result = self.find_website_links(self.agent_destination, soup)\n",
-    "\n",
-    "            internal_website_urls = result[0]\n",
-    "            external_website_urls = result[1]\n",
-    "            urls = self.join_lists(internal_website_urls, external_website_urls)\n",
-    "            emails_list_1 = result[2]\n",
-    "            social_networks_urls = result[3]\n",
-    "            whatsapp_cellphones = result[4]\n",
-    "            images_urls_1 = result[5]\n",
-    "\n",
-    "            # Get language of the website.\n",
-    "            language = self.get_language(text)\n",
-    "\n",
-    "            # Load english language processing model.\n",
-    "            if language == \"en\":\n",
-    "                nlp = spacy.load(\"en_core_web_sm\")\n",
-    "\n",
-    "            # Load spanish language processing model.\n",
-    "            elif language == \"es\":\n",
-    "                nlp = spacy.load(\"es_core_news_sm\")\n",
-    "\n",
-    "            # Get names that appear on the website.\n",
-    "            names = self.get_names(text, nlp)\n",
-    "\n",
-    "            # Get locations\n",
-    "            locations = self.find_locations(text, nlp)\n",
-    "\n",
-    "            # Get coordinates of maps that appear on the website.\n",
-    "            iframes = self.getWebsiteIFrames(soup)\n",
-    "\n",
-    "            # Get orgazations name's that appear on the website.\n",
-    "            organizations = self.find_organizations(text, nlp)\n",
-    "\n",
-    "            # Get dates that appear on the website.\n",
-    "            dates = self.find_dates(text, nlp)\n",
-    "\n",
-    "            # Get all phone numbers that appear on the website.\n",
-    "            phonenumbers = self.join_lists(self.getPhoneNumbers(text),\n",
-    "                                           whatsapp_cellphones)\n",
-    "\n",
-    "            # Get images urls that appear on the website. \n",
-    "            images_urls = self.join_lists(self.getImagesFromWebPage(self.agent_destination, download=False, secs=0), \n",
-    "                                          images_urls_1)\n",
-    "\n",
-    "            # Get payment accounts that appear on the website.\n",
-    "            payment_accounts = self.getPayment(text)\n",
-    "\n",
-    "            # Get emails that appear on the website.\n",
-    "            emails = self.getEmails(text)\n",
-    "\n",
-    "            return [self.destination_hash, # ID of the website.\n",
-    "                    self.agent_destination,# URL of the website.\n",
-    "                    content_type,          # Content Type of the website.\n",
-    "                    language,              # Language of the website.\n",
-    "                    urls,                  # URLS found on the website.\n",
-    "                    social_networks_urls,  # Social networks urls.\n",
-    "                    text,                  # Text of the website.\n",
-    "                    names,                 # Names that appeared on the website.\n",
-    "                    locations,             # Locations mentioned on website.\n",
-    "                    iframes,               # Iframes code (maps or videos) that appear on the website.\n",
-    "                    organizations,         # Organization name's.\n",
-    "                    dates,                 # Dates on the website.\n",
-    "                    phonenumbers,          # Phonenumbers on the website.\n",
-    "                    images_urls,           # Images urls.\n",
-    "                    payment_accounts,      # Payment Accounts (banks, crytpo).\n",
-    "                    emails                 # Emails on the website.\n",
-    "                   ]\n",
+    "        # Get dates that appear on the website.\n",
+    "        dates = self.find_dates(text, nlp)\n",
     "        \n",
-    "        # This website is not interesting.\n",
-    "        else: \n",
-    "            return -1\n",
+    "        # Get all phone numbers that appear on the website.\n",
+    "        phonenumbers = self.join_lists(self.getPhoneNumbers(text),\n",
+    "                                       whatsapp_cellphones)\n",
+    "        \n",
+    "        # Get images urls that appear on the website. \n",
+    "        images_urls = self.join_lists(self.getImagesFromWebPage(self.agent_destination, download=False, secs=0), \n",
+    "                                      images_urls_1)\n",
+    "        \n",
+    "        # Get payment accounts that appear on the website.\n",
+    "        payment_accounts = self.getPayment(text)\n",
+    "        \n",
+    "        # Get emails that appear on the website.\n",
+    "        emails = self.getEmails(text)\n",
+    "        \n",
+    "        return [self.destination_hash, # ID of the website.\n",
+    "                self.agent_destination,# URL of the website.\n",
+    "                content_type,          # Content Type of the website.\n",
+    "                language,              # Language of the website.\n",
+    "                urls,                  # URLS found on the website.\n",
+    "                social_networks_urls,  # Social networks urls.\n",
+    "                text,                  # Text of the website.\n",
+    "                names,                 # Names that appeared on the website.\n",
+    "                locations,             # Locations mentioned on website.\n",
+    "                iframes,               # Iframes code (maps or videos) that appear on the website.\n",
+    "                organizations,         # Organization name's.\n",
+    "                dates,                 # Dates on the website.\n",
+    "                phonenumbers,          # Phonenumbers on the website.\n",
+    "                images_urls,           # Images urls.\n",
+    "                payment_accounts,      # Payment Accounts (banks, crytpo).\n",
+    "                emails                 # Emails on the website.\n",
+    "               ]\n",
     "        \n",
     "    ## -----------------------\n",
     "    ## Webscrapping functions.\n",
     "    ## -----------------------\n",
     "    \n",
-    "    \"\"\"\n",
-    "    This function return the distance of the witness from the root.\n",
-    "    \"\"\"\n",
     "    def getDistance(self):\n",
     "        return self.distance_from_root\n",
     "    \n",
@@ -482,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -495,37 +467,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['www.google.com',\n",
-       " 'cbswag.com',\n",
-       " 'exoticads.com',\n",
-       " 'support.chaturbate.com',\n",
-       " 'www.surveymonkey.com',\n",
-       " 'ar.chaturbate.com',\n",
-       " 'de.chaturbate.com',\n",
-       " 'el.chaturbate.com',\n",
-       " 'en.chaturbate.com',\n",
-       " 'es.chaturbate.com',\n",
-       " 'fr.chaturbate.com',\n",
-       " 'hi.chaturbate.com',\n",
-       " 'it.chaturbate.com',\n",
-       " 'ja.chaturbate.com',\n",
-       " 'ko.chaturbate.com',\n",
-       " 'nl.chaturbate.com',\n",
-       " 'pt.chaturbate.com',\n",
-       " 'ru.chaturbate.com',\n",
-       " 'tr.chaturbate.com',\n",
-       " 'zh.chaturbate.com',\n",
-       " 'www.rtalabel.org',\n",
-       " 'www.asacp.org']"
+       "['http://www.google.com/',\n",
+       " 'https://cbswag.com',\n",
+       " 'https://exoticads.com/aff/in/mrps/agBmX/?track=top_skyscraper',\n",
+       " 'https://exoticads.com/aff/in/mrps/agBmX/?track=mid_skyscraper',\n",
+       " 'https://exoticads.com/aff/in/mrps/agBmX/?track=tbot_skyscraper',\n",
+       " 'https://exoticads.com/aff/in/mrps/agBmX/?track=left_footer',\n",
+       " 'https://exoticads.com/aff/in/mrps/agBmX/?track=mid_footer',\n",
+       " 'https://exoticads.com/aff/in/mrps/agBmX/?track=right_footer',\n",
+       " 'https://support.chaturbate.com/',\n",
+       " 'https://www.surveymonkey.com/r/5XLZ85R',\n",
+       " 'https://exoticads.com/',\n",
+       " 'https://ar.chaturbate.com/',\n",
+       " 'https://de.chaturbate.com/',\n",
+       " 'https://el.chaturbate.com/',\n",
+       " 'https://en.chaturbate.com/',\n",
+       " 'https://es.chaturbate.com/',\n",
+       " 'https://fr.chaturbate.com/',\n",
+       " 'https://hi.chaturbate.com/',\n",
+       " 'https://it.chaturbate.com/',\n",
+       " 'https://ja.chaturbate.com/',\n",
+       " 'https://ko.chaturbate.com/',\n",
+       " 'https://nl.chaturbate.com/',\n",
+       " 'https://pt.chaturbate.com/',\n",
+       " 'https://ru.chaturbate.com/',\n",
+       " 'https://tr.chaturbate.com/',\n",
+       " 'https://zh.chaturbate.com/',\n",
+       " 'http://www.rtalabel.org/',\n",
+       " 'http://www.asacp.org/ASACP.php/']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +774,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
