--- a/Website.ipynb
+++ b/Website.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,6 +195,9 @@
     "            del witness\n",
     "            return False\n",
     "        \n",
+    "    def searchable_url(self, hostname):\n",
+    "        return \"https://\" + hostname\n",
+    "        \n",
     "    #--------------------------------------------------------------------------\n",
     "    # SET METHODS\n",
     "    #--------------------------------------------------------------------------\n",
@@ -318,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
