--- a/Website.ipynb
+++ b/Website.ipynb
@@ -6,6 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Import text clustering model\n",
+    "%run ./text_clustering_final.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class Website:\n",
     "    \n",
     "    #--------------------------------------------------------------------------\n",
@@ -46,6 +56,7 @@
     "        self.__organizations=organizations\n",
     "        self.__text=text\n",
     "        self.__social_networks=social_networks_urls\n",
+    "        self.__score = cluster_text(self.__text)\n",
     "        \n",
     "    #--------------------------------------------------------------------------\n",
     "    # METHODS\n",
@@ -296,6 +307,13 @@
     "    def getSocialNetworks(self):\n",
     "        return self.__social_networks"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
