--- a/TheWitness.ipynb
+++ b/TheWitness.ipynb
@@ -39,14 +39,12 @@
     "    social_media_names_file = \"./datasets/socialmedia_names.txt\"\n",
     "    \n",
     "    # Initialize witness features.\n",
-    "    def __init__(self, origin_url, destination_url, destination_hash, \n",
-    "                 distance_from_root):\n",
+    "    def __init__(self, origin_url, destination_url, distance_from_root):\n",
     "        \n",
     "        # Where was the agent created?\n",
     "        self.agent_origin = origin_url\n",
     "        self.agent_destination = destination_url\n",
     "        self.agent_session = requests.session()\n",
-    "        self.destination_hash = destination_hash\n",
     "        self.distance_from_root = distance_from_root\n",
     "        \n",
     "    \n",
@@ -115,8 +113,7 @@
     "        # Get emails that appear on the website.\n",
     "        emails = self.getEmails(text)\n",
     "        \n",
-    "        return [self.destination_hash, # ID of the website.\n",
-    "                self.agent_destination,# URL of the website.\n",
+    "        return [self.agent_destination,# URL of the website.\n",
     "                content_type,          # Content Type of the website.\n",
     "                language,              # Language of the website.\n",
     "                urls,                  # URLS found on the website.\n",
@@ -764,7 +761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
