--- a/Website.ipynb
+++ b/Website.ipynb
@@ -21,42 +21,43 @@
     "    #--------------------------------------------------------------------------\n",
     "    # CONSTRUCTOR\n",
     "    #--------------------------------------------------------------------------               \n",
-    "\n",
     "    def __init__(self,                     \n",
     "                 ID,                         # ID of the website.\n",
     "                 url,                        # URL of the website.\n",
     "                 content_type,               # Contet Type of the website.\n",
     "                 language,                   # Language of the website.\n",
+    "                 score,                      # Score of the website.\n",
     "                 urls = [],                  # URLS found on the website.\n",
     "                 social_networks_urls=[],    # Social networks urls.\n",
-    "                 text=\"\",                    # Text of the website.\n",
-    "                 names= [],                  # Names that appeared on the website.\n",
+    "                 text = \"\",                  # Text of the website.\n",
+    "                 names = [],                 # Names that appeared on the website.\n",
     "                 locations = [],             # Locations mentioned on website.\n",
     "                 iframes = [],               # Iframes code (maps or videos) that appear on the website.\n",
-    "                 organizations=[],           # Organization names.\n",
+    "                 organizations = [],         # Organization names.\n",
     "                 dates = [],                 # Dates on the website.\n",
     "                 phonenumbers = [],          # Phonenumbers on the website.\n",
     "                 images_urls = [],           # Images urls.\n",
     "                 payment_accounts= [],       # Payment Accounts (banks, crytpo).\n",
-    "                 emails=[]):                 # Emails on the website.\n",
+    "                 emails = [],                  # Emails on the website.\n",
+    "                ):                \n",
     "        \n",
     "        self.__ID = ID # (SHA256, \"http://titulopagina.com\")\n",
     "        self.__url = url\n",
     "        self.__content_type = content_type\n",
     "        self.__language = language\n",
     "        self.__names =names\n",
-    "        self.__locations=locations\n",
-    "        self.__urls=urls\n",
-    "        self.__phonenumbers=phonenumbers\n",
+    "        self.__locations = locations\n",
+    "        self.__urls = urls\n",
+    "        self.__phonenumbers = phonenumbers\n",
     "        self.__iframes = iframes\n",
-    "        self.__images_urls=images_urls\n",
-    "        self.__dates=dates\n",
+    "        self.__images_urls = images_urls\n",
+    "        self.__dates = dates\n",
     "        self.__payment_accounts=payment_accounts\n",
-    "        self.__emails=emails\n",
-    "        self.__organizations=organizations\n",
-    "        self.__text=text\n",
-    "        self.__social_networks=social_networks_urls\n",
-    "        self.__score = cluster_text(self.__text)\n",
+    "        self.__emails = emails\n",
+    "        self.__organizations = organizations\n",
+    "        self.__text = text\n",
+    "        self.__social_networks = social_networks_urls\n",
+    "        self.__score = score\n",
     "        \n",
     "    #--------------------------------------------------------------------------\n",
     "    # METHODS\n",
@@ -65,12 +66,12 @@
     "    def printFormat(self, list_):\n",
     "        for i in range(len(list_)): \n",
     "            print(\"--------\")\n",
-    "            print(lista_par[i])\n",
+    "            print(list_[i])\n",
     "        if type(result[i]) == list:\n",
     "            for element in result[i]:\n",
     "                print(element)\n",
     "        else: \n",
-    "            print(result[i])\n",
+    "            print(list_[i])\n",
     "            print(\"\\n\")\n",
     "    \n",
     "    def info(self):\n",
@@ -123,7 +124,7 @@
     "    def __str__(self):\n",
     "        return \"Node ID \" + self.__ID\n",
     "    \n",
-    "    def toTextPlain(self, ruta):\n",
+    "    def toPlainText(self, ruta):\n",
     "        file = open(\"./datasets/\"+self.ID+\".txt\")\n",
     "        file.write()\n",
     "        file.write(\"--------\")\n",
@@ -205,9 +206,6 @@
     "        except:\n",
     "            del witness\n",
     "            return False\n",
-    "        \n",
-    "    def searchable_url(self, hostname):\n",
-    "        return \"https://\" + hostname\n",
     "        \n",
     "    #--------------------------------------------------------------------------\n",
     "    # SET METHODS\n",
@@ -320,7 +318,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cluster_text(self.__text)\n",
+    "ToPlainText"
+   ]
   }
  ],
  "metadata": {
@@ -339,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
